[project]
name = "enscroll"
version = "0.1.0"
description = "enscript but with dedicated area for adhesives"
authors = [{ name = "esdmr", email = "esdmr0@gmail.com" }]
dependencies = [
    "pygments>=2.17.2",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
enscroll = "enscroll:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
